--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -53,10 +53,17 @@ jobs:
         pip install -r requirements.txt
         cd ..
         
+    # Create deployment package
+    - name: Create deployment package
+      run: |
+        cd backend
+        zip -r ../deploy.zip . -x "*.pyc" "__pycache__/*"
+        cd ..
+        
     # Deploy to Azure
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
       with:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-        package: ./backend
+        package: ./deploy.zip
