Update branding to LunaJoy Matching Engine and new logos
Rebranded the frontend from 'React App' to 'LunaJoy Matching Engine' across documentation, HTML, and manifest. Updated the header to use new LunaJoy logo images with scroll-based transitions, removed the old logo, and added new dark and white logo assets.

--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -23,7 +23,7 @@ jobs:
       with:
         node-version: ${{ env.NODE_VERSION }}
         
-    - name: Install and build React app
+    - name: Install and build LunaJoy Matching Engine
       run: |
         cd frontend
         npm ci
