--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -6,8 +6,8 @@ on:
   workflow_dispatch:
 
 env:
-  AZURE_WEBAPP_NAME: 4c756e614a6f79204368616c6c656e67650a
-  PYTHON_VERSION: '3.9'
+  AZURE_WEBAPP_NAME: '4c756e614a6f79204368616c6c656e67650a'
+  PYTHON_VERSION: '3.11'
   NODE_VERSION: '18.x'
 
 jobs:
@@ -35,6 +35,12 @@ jobs:
       run: |
         mkdir -p backend/static
         cp -r frontend/build/* backend/static/
+        
+        # Debug: verificar que se copiaron los archivos
+        echo "📁 Contents of backend/static:"
+        ls -la backend/static/
+        echo "📁 Checking for index.html:"
+        ls -la backend/static/index.html
     
     # Setup Python
     - name: Setup Python
@@ -42,23 +48,41 @@ jobs:
       with:
         python-version: ${{ env.PYTHON_VERSION }}
         
-    - name: Create and activate virtual environment
-      run: |
-        python -m venv venv
-        source venv/bin/activate
-        
     - name: Install Python dependencies
       run: |
         cd backend
+        python -m pip install --upgrade pip
         pip install -r requirements.txt
+        cd ..
+        
+    # Create startup.txt if it doesn't exist
+    - name: Create startup configuration
+      run: |
+        cd backend
+        echo "gunicorn --bind=0.0.0.0:8000 --timeout 600 --access-logfile '-' --error-logfile '-' --workers 4 --worker-class uvicorn.workers.UvicornWorker main:app" > startup.txt
         cd ..
         
     # Create deployment package
     - name: Create deployment package
       run: |
         cd backend
-        zip -r ../deploy.zip . -x "*.pyc" "__pycache__/*"
+        
+        # Create deployment package including all files
+        zip -r ../deploy.zip . \
+          -x "*.pyc" \
+          -x "__pycache__/*" \
+          -x "venv/*" \
+          -x ".git/*" \
+          -x "*.db" \
+          -x ".env" \
+          -x ".pytest_cache/*" \
+          -x "node_modules/*"
+          
         cd ..
+        
+        # Debug: verificar el tamaño del zip
+        echo "📦 Deployment package size:"
+        ls -lh deploy.zip
         
     # Deploy to Azure
     - name: Deploy to Azure Web App
