--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,18 +1,67 @@
-# requirements.txt
-# FastAPI y servidor
+annotated-types==0.7.0
+anyio==3.7.1
+asttokens==3.0.0
+click==8.2.1
+colorama==0.4.6
+comm==0.2.2
+contourpy==1.3.2
+cycler==0.12.1
+debugpy==1.8.14
+decorator==5.2.1
+executing==2.2.0
+Faker==37.4.0
 fastapi==0.104.1
-uvicorn[standard]==0.24.0
-
-# Validación de datos
+fonttools==4.58.5
+gunicorn==21.2.0
+h11==0.16.0
+httptools==0.6.4
+idna==3.10
+ipykernel==6.29.5
+ipython==9.4.0
+ipython_pygments_lexers==1.1.1
+jedi==0.19.2
+joblib==1.5.1
+jupyter_client==8.6.3
+jupyter_core==5.8.1
+kiwisolver==1.4.8
+matplotlib==3.10.3
+matplotlib-inline==0.1.7
+nest-asyncio==1.6.0
+numpy==1.24.3
+packaging==25.0
+pandas==2.3.1
+parso==0.8.4
+pillow==11.3.0
+platformdirs==4.3.8
+prompt_toolkit==3.0.51
+psutil==7.0.0
+pure_eval==0.2.3
 pydantic==2.5.0
 pydantic-settings==2.1.0
-
-# Variables de entorno
+pydantic_core==2.14.1
+Pygments==2.19.2
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.0
-
-# Para CORS y manejo de archivos
 python-multipart==0.0.6
-
-# Machine Learning (necesario para clustering y collaborative filtering)
-numpy==1.24.3
+pytz==2025.2
+pywin32==311
+PyYAML==6.0.2
+pyzmq==27.0.0
 scikit-learn==1.3.2
+scipy==1.15.3
+seaborn==0.13.2
+six==1.17.0
+sniffio==1.3.1
+stack-data==0.6.3
+starlette==0.27.0
+threadpoolctl==3.6.0
+tornado==6.5.1
+traitlets==5.14.3
+typing-inspection==0.4.1
+typing_extensions==4.14.1
+tzdata==2025.2
+uvicorn==0.24.0
+watchfiles==1.1.0
+wcwidth==0.2.13
+websockets==15.0.1
