Update Azure deploy action to v3 in workflow
Upgraded the Azure Web App deploy GitHub Action from v2 to v3 and updated the app-name value in the deploy-backend.yml workflow. Also removed extra spaces in the publish-profile secret reference.

--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -91,8 +91,8 @@ jobs:
         
     # Deploy to Azure
     - name: Deploy to Azure Web App
-      uses: azure/webapps-deploy@v2
+      uses: azure/webapps-deploy@v3  # Cambiar a v3
       with:
-        app-name: ${{ env.AZURE_WEBAPP_NAME }}
-        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_BACKEND  }}
+        app-name: '4c756e614a6f79204368616c6c656e65610a'
+        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_BACKEND }}
         package: ./deploy.zip
