--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,1 +1,1 @@
-REACT_APP_API_URL=https://4c756e614a6f79204368616c6c656e67650a.azurewebsites.net
+REACT_APP_API_URL=https://lunajoy-backend-api.azurewebsites.net
