--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,6 +14,7 @@ Faker==37.4.0
 fastapi==0.104.1
 fonttools==4.58.5
 gunicorn==21.2.0
+uvicorn[standard]==0.24.0
 h11==0.16.0
 httptools==0.6.4
 idna==3.10
@@ -61,7 +62,6 @@ traitlets==5.14.3
 typing-inspection==0.4.1
 typing_extensions==4.14.1
 tzdata==2025.2
-uvicorn==0.24.0
 watchfiles==1.1.0
 wcwidth==0.2.13
 websockets==15.0.1
